add documentation on README
> add doc with details about the project purpose, requirements, useful
commands, how to run the application, how to craw page, how to run the
internal documentation and how to run sonarqube locally

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       dockerfile: Dockerfile
     container_name: crawler-api
     command:
-      - ${BINARY}
-      - ${COMMAND}
+      - ./crawler
+      - api
     environment:
       LOG_LEVEL: ${LOG_LEVEL}
       MONGODB_USERNAME: ${MONGODB_USERNAME}
