--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -14,7 +14,8 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.19
+          go-version: 1.20.1
+          check-latest: true
       
       - name: Set up govulncheck
         run: go install golang.org/x/vuln/cmd/govulncheck@latest
